force-app/main/default/objects/GeneralTermsCondition__c/GeneralTermsCondition__c.object-meta.xml
<CustomObject>
    <description>Formato Autonumber: CGC-{0000}</description>
    <label>Condizioni Generali di Contratto</label>
    <nameField>
        <displayFormat>CGC-{0000}</displayFormat>
        <label>Numero CGC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condizioni Generali di Contratto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>