force-app/main/default/objects/GeneralTermsCondition__c/fields/CgcCode__c.field-meta.xml
<CustomField>
    <fullName>CgcCode__c</fullName>
    <description>Indica il codice delle CGC</description>
    <externalId>true</externalId>
    <label>Codice CGC</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>