force-app/main/default/objects/GeneralTermsCondition__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Prodotto</description>
    <label>Prodotto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Condizioni Generali di Contratto</relationshipLabel>
    <relationshipName>Condizioni_Generali_di_Contratto</relationshipName>
    <type>Lookup</type>
</CustomField>