force-app/main/default/objects/GeneralTermsCondition__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Data inizio validità</description>
    <label>Inizio Validità</label>
    <type>Date</type>
</CustomField>