force-app/main/default/objects/GeneralTermsCondition__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Società di Vendita</description>
    <label>Società di Vendita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SalesCompany</valueSetName>
    </valueSet>
</CustomField>