force-app/main/default/objects/GeneralTermsCondition__c/validationRules/HDT_RequiredProductRule.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_RequiredProductRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(CgcType__c , &quot;VAS&quot;), ISBLANK(Product__c))</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Il Prodotto è obbligatorio per le CGC di tipo VAS.</errorMessage>
</ValidationRule>