force-app/main/default/objects/GeneralTermsCondition__c/listViews/HDT_GeneralTermsCondition.listView-meta.xml
<ListView>
    <fullName>HDT_GeneralTermsCondition</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CgcType__c</columns>
    <columns>CgcCode__c</columns>
    <columns>Product__c</columns>
    <columns>Version__c</columns>
    <columns>Vendor__c</columns>
    <columns>MarketArea__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Elenco Condizioni Generali di Contratto</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>